<resources>
    <string name="app_name">HelloEaseMob</string>
    <string name="un">用户名</string>
    <string name="pw">密码</string>
    <string name="sign_up">注册</string>
    <string name="sign_in">登陆</string>
    <string name="confirm_pw">确认密码</string>
    <string name="confirm">确定</string>
    <string name="create">创建</string>
    <string name="chat">会话</string>
    <string name="settings">设置</string>
    <string name="send">发送</string>
    <string name="target_username">目标用户名</string>
    <string name="create_conversation">发起会话</string>
    <string name="group">群组</string>
    <string name="chat_room">聊天室</string>
    <string name="create_group">创建群组</string>
    <string name="join_group">加入群组</string>
    <string name="group_name">群组名称</string>
    <string name="group_desc">群组简介</string>
    <string name="gp_public">公开</string>
    <string name="gp_member_invitation">允许成员邀请</string>
    <string name="gp_owner_agreement">群主审核加入</string>
    <string name="is_loading_more">正在加载更多...</string>

</resources>
